v19.0/4.产品特性/1.工作表/1.工作表保护与锁定单元格.md
# celllock

SpreadJS 允许您保护锁定所有单元格的工作表并防止其他用户更改、移动或删除数据。 但是，您仍然可以从锁定的单元格中复制数据。
**isProtected** 选项可以设置 为 true 以保护工作表和[锁定](gcdocsite__documentlink?toc-item-id=64f05fd4-fafa-47dc-9856-b74263f357ec#locked)方法可用于锁定或解锁单元格。

### 解锁受保护工作表中的单元格

您可以通过将 **locked** 方法设置为False，允许用户编辑受保护工作表中的特定单元格。

```JavaScript
sheet.getCell(1,1, GC.Spread.Sheets.SheetArea.viewport).locked(false);
sheet.setValue(1,1,"unLocked");
sheet.getRange(-1,3, -1, 1).locked(false);
sheet.getRange(5, -1, 1, -1).locked(false);
sheet.options.isProtected = true;
```

### 在受保护的工作表中锁定一系列单元格

您可以按照以下步骤选择锁定受保护工作表中特定范围的单元格：

* 通过创建自定义样式并将 **locked** 方法设置为 False 来解锁所有单元格。
* 单独锁定您想要只读的单元格范围。

```JavaScript
// 配置工作簿和工作表
var spread = new GC.Spread.Sheets.Workbook("ss");
var sheet = spread.getActiveSheet();
// Unlock all the cells in the worksheet via the styles
let style = new GC.Spread.Sheets.Style();
style.locked = false;
// 将样式设置为工作表中所有单元格的默认样式
sheet.setDefaultStyle(style);
// 单独锁定你想只读的单元格范围
new GC.Spread.Sheets.CellRange(sheet, 0, 0, 13, 4).locked(true);
// 设置要保护的工作表
sheet.options.isProtected = true;
```

**options.protectionOptions** 属性可用于指定可以更改的区域。 这些区域可以包括调整大小、拖动、插入或删除行或列等。
**isProtected** 选项设置为true时，以下属性设置为True时生效：

| 特性 | 说明 |
| --- | --- |
| allowDragInsertRows | 允许您在插入行时执行拖动操作。 |
| allowDragInsertColumns | 允许您在插入列时执行拖动操作。 |
| allowInsertRows | 允许您插入行。 |
| allowInsertColumns | 允许您插入列。 |
| allowDeleteRows | 允许您删除行。 |
| allowDeleteColumns | 允许您删除列。 |
| allowSelectLockedCells | 允许您选择锁定的单元格。 |
| allowSelectUnlockedCells | 允许您选择未锁定的单元格。 |
| allowSort | 允许您对范围进行排序。 |
| allowFilter | 允许筛选范围。 |
| allowEditObjects | 允许您编辑浮动对象。 |
| allowResizeRows | 允许您调整行大小。 |
| allowResizeColumns | 允许您调整列的大小。 |
| allowOutlineRows | 允许您展开或折叠行组。 |
| allowOutlineColumns | 允许您展开或折叠列组。 |

当 **isProtected** 选项设置为false时，上述保护选项将不起作用。

### 在锁定的工作表中启用保护选项

您可以保护工作表并启用 SpreadJS 中可用的各种保护选项。

```JavaScript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
var sheet = spread.getActiveSheet();
sheet.options.isProtected = true;
sheet.options.protectionOptions.allowDeleteRows  = true;
sheet.options.protectionOptions.allowDeleteColumns = true;
sheet.options.protectionOptions.allowInsertRows = true;
sheet.options.protectionOptions.allowInsertColumns = true;
sheet.options.protectionOptions.allowDargInsertRows = true;
sheet.options.protectionOptions.allowDragInsertColumns = true;
```

>type=warning
> **注意:** 保护选项：allowInsertRows，allowInsertColumns，allowDeleteRows和allowDeleteColumns仅在用户界面上执行操作时可用。 换句话说，该值将仅限制上下文菜单中行和列的插入和删除命令。

### 为受保护组设置警告消息

默认情况下，您不能在受保护的工作表中展开或折叠大纲行或列组。 触发了 invalidOperation 事件，您还可以绑定该事件以显示警告消息，如下所示：

```JavaScript
// Set alert message
spread.bind(GC.Spread.Sheets.Events.InvalidOperation, (e, args) => {
    if(args.invalidType === GC.Spread.Sheets.InvalidOperationType.groupProtected){
    args.message="Expand or Collapse operation is not allowed for a protected worksheet.";
    alert(args.message)
    }
});
```

## 用密码保护工作表

**您可以选择在使用protect**方法保护工作表的同时设置密码。但是，在调用 protect 方法时，**isProtected**选项将自动设置为 true。

```javascript
//Protect the worksheet 
var password = 'AddedPassword'; 
activeSheet.protect(password); 
```

您可以通过将密码作为参数提供给**取消保护**方法来进一步取消对工作表的保护。

```javascript
//unprotect the worksheet with a password
if(activeSheet.hasPassword()) {
    activeSheet.unprotect(password);
} else {
    activeSheet.unprotect();
}
```

## 在受保护的工作表中隐藏公式

您可以使用 Style 类的 hidden 属性或 CellRange 类的 hidden 方法来控制受保护工作表中公式单元格的可见性。默认情况下，hidden 属性设置为 false，表示公式不会被隐藏。
此外，它还支持 SSJSON、SJS 和 XLSX 的导出和导入。
hidden 属性在某些情况下非常有用，比如根据员工自评和主管评估生成 KPI 数据或年终奖金时，雇主希望隐藏相关公式并保护评估系统。
以下代码示例展示了如何使用 GC.Spread.Sheets.Style 类型的 hidden 属性来隐藏单元格。

```javascript
// Sets whether the cell formula is visible when the sheet is protected.
activeSheet.options.isProtected = true;

// Create a style with hidden property true
var style = new GC.Spread.Sheets.Style();
style.hidden = true;
activeSheet.setStyle(1, 1, style, GC.Spread.Sheets.SheetArea.viewport);

// Apply style to a cell containing formula
activeSheet.setFormula(1, 1, "=SUM(1,2)");
```

或者，此代码示例使用 GC.Spread.Sheets.CellRange 类型中的隐藏方法

```javascript
// Sets whether the cell formula is visible when the sheet is protected.
activeSheet.options.isProtected = true;
activeSheet.setFormula(1, 3, "=SUM(10,20)");
activeSheet.getRange(1, 3, GC.Spread.Sheets.SheetArea.viewport).hidden(true);
```

以下 SpreadJS 功能受 hidden 属性的影响：

* 当单元格设置了 hidden 属性时，公式栏和公式编辑器面板不会显示任何公式。
* 当隐藏单元格处于编辑模式时，输入编辑器中的默认数据为空。
* 隐藏单元格不会复制公式，只复制结果，但剪切操作始终包含公式。
* 但是，您可以通过将 locked 属性设置为 true 来防止这种情况。
* showFormulas 属性不会显示隐藏单元格的公式。
* 如果 hidden 属性生效，FORMULATEXT() 方法无法获取单元格的公式。

请注意，hidden 和 locked 属性会互相影响其功能，如下表所示：

| 情况 | locked | hidden | 结果 |
| --- | ------ | ------ | --- |
| 工作表未受保护 | True/False | True/False | locked 和 hidden 都不会生效 |
| @rows=4:工作表受保护 | False | False | 单元格可编辑，公式正常显示 |
| True | True | 单元格被锁定，无法编辑，但公式显示正常 |
| False | False | 单元格可编辑，但公式被隐藏，在编辑模式下，输入框显示为空 |
| True | True | 单元格锁定，不可编辑，且公式被隐藏 |

限制：

* TableSheet、GanttSheet 和 ReportSheet 不支持 hidden 属性。
* 隐藏属性不会影响通过 API 访问的公式。

## 在受保护工作表中启用数据透视表功能

SpreadJS 通过 `allowUsePivotTable` 属性支持在受保护工作表中进行有限的数据透视表交互：

* 设置为 `true` 时，用户可以修改数据透视表；
* 设置为 `false` 时，大多数编辑操作会被限制，但部分基础操作仍可用。

>type=note
> **注意事项**：
>
> * 数据透视表的保护**仅适用于UI层面的操作**。基于API的修改（通过代码编程实现）不受限制。
> * `allowUsePivotTable` 选项**仅在工作表保护启用时**（`isProtected = true`）生效。
> * 若需通过UI修改受保护的数据透视表，需临时禁用保护、执行更新操作，然后重新应用保护。

>type=info
> **使用技巧**：
> `allowUsePivotTable` 属性可在运行时修改，开发者无需完全重新初始化工作表即可调整交互权限。

以下提供代码示例及详细表格，列出保护模式下可用的数据透视表功能：

```javascript
var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
var sheet = spread.getActiveSheet();
sheet.options.isProtected = true; // 启用工作表保护
sheet.options.protectionOptions.allowUsePivotTable = false; // 禁用受保护模式下的数据透视表操作
```

### 保护模式下的可用功能

当工作表处于保护状态（`isProtected = true` 且 `allowUsePivotTable = false`）时，以下数据透视表操作仍可执行：

| **功能** | **描述** |
| --- | --- |
| 修改数据透视表名称 | 重命名数据透视表实例。 |
| 修改小计类型 | 更改小计的计算模式（如求和、计数、平均值等）。 |
| 隐藏无数据项 | 控制空单元格的显示行为（显示/隐藏无数据项）。 |
| 字段小计位置 | 调整单个字段的小计显示位置（如字段上方/下方）。 |
| 设置字段区域及索引 | 在数据透视表的不同区域（行/列/值/筛选器）中重新排列字段位置。 |
| 折叠与展开 | 展开或折叠分组的数据项。 |
| 清除筛选 | 移除已应用的筛选条件。 |
| 筛选 | 应用值筛选或标签筛选。 |
| 排序 | 更改字段的排序方式（升序/降序/自定义排序）。 |
| 拖放字段 | 在允许的数据透视表区域内移动字段。 |

### 不可用功能（自动禁用）

以下操作需在工作表未保护状态下才能修改数据透视表的数据或结构：
**布局与显示配置**

* 所有数据透视表选项
* 布局与样式配置
* 重复字段标签
* 字段格式化
* 数据显示方式
* 数据透视表小计位置
* 主题
* 总计

**计算与字段操作**

* 计算字段
* 计算项
* 条件格式

**数据与结构操作**

* 更新或更改数据源
* 全部清除
* 分组
* 删除数据透视表
* 切片器和时间线（筛选控件）

## 使用设计器

要访问“保护工作表”对话框，请通过右键单击选项卡条上显示的工作表名称导航到“保护工作表”选项。
**使用保护工作表对话框保护和取消保护工作表的步骤**

1. 输入密码以保护工作表，并从“保护工作表”对话框的可用选项列表中选中/取消选中多个选项。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/7c3e5757-7200-459c-91d6-c795c0854396/image-20251226.1ee3cc.png)
2. 当您输入密码以保护工作表时，另一个对话框会确认密码。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/7c3e5757-7200-459c-91d6-c795c0854396/image-20251226.1a3754.png)
3. 成功设置密码后，您可以访问受保护的工作表，但不能对工作表进行任何更改。要取消保护工作表，请使用“取消保护工作表”对话框输入设置的密码。
    ![image](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/7c3e5757-7200-459c-91d6-c795c0854396/image-20251226.998f04.png)